--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         </div>
 
         <div class="row">
-            <div class="col mr-2" id="target-number">
+            <div class="col" id="target-number">
                 <h4>Target Number</h4>
                 <p id="random-number"></p>
             </div>
-            <div class="col ml-2" id="tally">
+            <div class="col" id="tally">
                 <h4>Your Number</h4>
                 <p id="your-number">0</p>
             </div>
@@ -56,11 +56,11 @@
         </div>
 
         <div class="row">
-            <div class="col-3 mr-2" id="wins">
+            <div class="col-3" id="wins">
                 <h4>Wins</h4>
                 <p id="wins-count">0</p>
             </div>
-            <div class="col-3 mx-2" id="losses">
+            <div class="col-3" id="losses">
                 <h4>Losses</h4>
                 <p id="losses-count">0</p>
             </div>
